removed TODO that we didn't need got modals to work for adding types/locations

--- a/public/lib/fullcalendar/fullcalendar.css
+++ b/public/lib/fullcalendar/fullcalendar.css
@@ -168,7 +168,7 @@ previous button's border...
 	box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
 
-.fc-popover .fc-header { /* TODO: be more consistent with fc-head/fc-body */
+.fc-popover .fc-header {
 	padding: 2px 4px;
 }
 
@@ -376,7 +376,6 @@ temporary rendered events).
 	-webkit-overflow-scrolling: touch;
 }
 
-/* TODO: move to agenda/basic */
 .fc-scroller > .fc-day-grid,
 .fc-scroller > .fc-time-grid {
 	position: relative; /* re-scope all positions */
@@ -674,12 +673,6 @@ a.fc-more:hover {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-
-
-/*
-TODO: more distinction between this file and common.css
-*/
-
 /* Colors
 --------------------------------------------------------------------------------------------------*/
 
@@ -847,7 +840,7 @@ NOTE: use percentage font sizes or else old IE chokes
 --------------------------------------------------------------------------------------------------*/
 
 .ui-widget .fc-event {
-	/* overpower jqui's styles on <a> tags. TODO: more DRY */
+	/* overpower jqui's styles on <a> tags.  */
 	color: #fff; /* default TEXT color */
 	text-decoration: none; /* if <a> has an href */
 
